--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
 
   #splash Screen
   animated_splash_screen: ^1.3.0
+  page_transition: ^2.0.9
+
+  animate_do: ^3.0.2
+  rename: ^2.1.1
 
 
 
@@ -32,11 +36,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.12.0
   flutter_lints: ^2.0.0
 
+flutter_icons: 
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
 flutter:
-
-
   uses-material-design: true
+  assets:
+    - assets/images/splash.png
+    - assets/images/logo.png
 
  
